# redteam

./: README.md  pyproject.toml
src/redteam/: __init__.py  cli.py  evaluator.py  model_client.py  report.py
